--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jclic-browser (0.1.0-2) unstable; urgency=low
+
+  * Add Vcs- debian/control headers to new GIT repos
+
+ -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Mon, 02 Feb 2009 01:22:50 +0100
+
 jclic-browser (0.1.0-1) unstable; urgency=low
 
   * Convert to python package (import jclic)
